--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Loup-Garou</string>
+    <string name="choix_mode">Choix du mode de jeu</string>
+    <string name="node_narrateur">Mode Narrateur</string>
+    <string name="mode_ligne">Mode en ligne</string>
 </resources>
